--- a/DockerFile
+++ b/DockerFile
@@ -1,16 +1,48 @@
-FROM python:3.10-slim
+FROM python:3.11-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-COPY requirements.txt /app/
-RUN pip install --upgrade pip && pip install -r requirements.txt
+# Install system dependencies required for some Python packages (e.g. psycopg2)
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends gcc libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-COPY . /app/
+# Install Python dependencies first to leverage Docker layer caching
+COPY requirements.txt /app/
+RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
+
+# Copy project
+COPY . /app
 
 EXPOSE 8000
 
-# Django serverni ishga tushirish
-CMD ["python", "manage.py", "runserver", "127.0.0.1:8000"]
+# Run the application with Gunicorn by default. For development you can override
+# the command in docker-compose to use Django's runserver (bind to 0.0.0.0).
+CMD ["gunicorn", "config.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "3"]
+FROM python:3.11-slim
+
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
+WORKDIR /app
+
+# Install system dependencies required for some Python packages (e.g. psycopg2)
+RUN apt-get update \
+	&& apt-get install -y --no-install-recommends gcc libpq-dev \
+	&& rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies first to leverage Docker layer caching
+COPY requirements.txt /app/
+RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
+
+# Copy project
+COPY . /app
+
+EXPOSE 8000
+
+# Run the application with Gunicorn by default. For development you can override
+# the command in docker-compose to use Django's runserver (bind to 0.0.0.0).
+CMD ["gunicorn", "config.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "3"]
