--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
-DJANGO_SECRET_KEY='django-insecure-km4059xz5_m)jrbi*pgqg=hw!mgf1yw-t=mh73icqm^zvz3nfp'
-DEBUG=True
-DJANGO_LOGLEVEL=info
-DJANGO_ALLOWED_HOSTS=localhost
-DATABASE_ENGINE=postgresql_psycopg2
-DATABASE_NAME=dockerdjango
-DATABASE_USERNAME=dbuser
-DATABASE_PASSWORD=dbpassword
+# Django configuration
+SECRET_KEY=django-insecure-km4059xz5_m)jrbi*pgqg=hw!mgf1yw-t=mh73icqm^zvz3nfp
+DEBUG=1
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+
+# Database configuration
+DATABASE_ENGINE=postgresql
+DATABASE_NAME=savdo
+DATABASE_USERNAME=savdo
+DATABASE_PASSWORD=savdo_pass
 DATABASE_HOST=db
 DATABASE_PORT=5432
